--- a/SomeProject/SomeProject/AdminMenu/UsersEdit.resx
+++ b/SomeProject/SomeProject/AdminMenu/UsersEdit.resx
@@ -141,8 +141,11 @@
   <metadata name="usersBindingSource1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>418, 13</value>
   </metadata>
+  <metadata name="error.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>679, 56</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>76</value>
+    <value>25</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1968,6 +1971,30 @@
         GgAAAABVVVitQ0JFYgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABgX18GMDAwTTM1NWQ1NTY3AAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAA4j8AAOIfAADAAQAAwAEAAIADAACAAwAAgAcAAIAHAACABwAAgAcA
         AIAPAADAAQAA4AEAAPABAAD4CQAA/D8AAA==
+</value>
+  </data>
+  <data name="error.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAP8IAAD/tAAA//YAAP/2AAD/9gAA//YAAP/2AAD/9gAA/7QAAP8IAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAP8IAAD/tgAA//8AAP+qAAD/mgAA/5oAAP+aAAD/mgAA/6oAAP//AAD/tgAA
+        /wgAAAAAAAAAAAAAAAAAAP8IAAD/tgAA//8AAP9yAAAAAAAAAAAAAP8IAAD/CAAAAAAAAAAAAAD/cgAA
+        //8AAP+2AAD/CAAAAAAAAP8IAAD/tgAA//8AAP9yAAAAAAAAAAAAAP8MAAD/5AAA/+QAAP8MAAAAAAAA
+        AAAAAP9yAAD//wAA/7YAAP8IAAD/tAAA//8AAP9yAAAAAAAAAAAAAAAAAAD/DgAA/+wAAP/uAAD/EAAA
+        AAAAAAAAAAAAAAAA/3IAAP//AAD/tAAA//YAAP+qAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8UAAD/FAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAD/qgAA//YAAP/2AAD/nAAAAAAAAAAAAAAAAAAAAAAAAP8MAAD/ygAA
+        /8oAAP8MAAAAAAAAAAAAAAAAAAAAAAAA/5oAAP/2AAD/9gAA/5wAAAAAAAAAAAAAAAAAAAAAAAD/DgAA
+        //8AAP//AAD/EAAAAAAAAAAAAAAAAAAAAAAAAP+aAAD/9gAA//YAAP+cAAAAAAAAAAAAAAAAAAAAAAAA
+        /w4AAP//AAD//wAA/xAAAAAAAAAAAAAAAAAAAAAAAAD/mgAA//YAAP/2AAD/nAAAAAAAAAAAAAAAAAAA
+        AAAAAP8OAAD//wAA//8AAP8QAAAAAAAAAAAAAAAAAAAAAAAA/5oAAP/2AAD/9gAA/6oAAAAAAAAAAAAA
+        AAAAAAAAAAD/DgAA//8AAP//AAD/EAAAAAAAAAAAAAAAAAAAAAAAAP+qAAD/9gAA/7QAAP//AAD/dAAA
+        AAAAAAAAAAAAAAAA/w4AAP//AAD//wAA/xAAAAAAAAAAAAAAAAAAAP90AAD//wAA/7QAAP8IAAD/tgAA
+        //8AAP90AAAAAAAAAAAAAP8KAAD/pAAA/6QAAP8KAAAAAAAAAAAAAP90AAD//wAA/7YAAP8IAAAAAAAA
+        /wgAAP+2AAD//wAA/3QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP90AAD//wAA/7YAAP8IAAAAAAAA
+        AAAAAAAAAAD/CAAA/7YAAP//AAD/qgAA/5wAAP+cAAD/nAAA/5wAAP+qAAD//wAA/7YAAP8IAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAP8IAAD/tAAA//YAAP/2AAD/9gAA//YAAP/2AAD/9gAA/7QAAP8IAAAAAAAA
+        AAAAAAAA8A8AAOAHAADP8wAAnnkAAD58AAA//AAAPnwAAD58AAA+fAAAPnwAAD58AAA+fAAAnnkAAM/z
+        AADgBwAA8A8AAA==
 </value>
   </data>
 </root>
