InteractiveMap[20%], About [90%], ShowImage [10%]

--- a/SomeProject/SomeProject/InfoMenu/About.resx
+++ b/SomeProject/SomeProject/InfoMenu/About.resx
@@ -120,6 +120,17 @@
   <metadata name="metroLabel1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <data name="metroLabel2.Text" xml:space="preserve">
+    <value>
+- Программа "Самба": Полный Марафон начнется в Руа-Ду-Американо в 6 утра.
+- Программа "Джонго": Полумарафон начнется в 7 утра Бегуны будут стартовать от недалеко от пересечения улицы Руа Ciniciata и Авенида.
+- Программа "Капоэйра": Забег в 5 км для новичков начнется в 15 часов у Мемориала Унинове.</value>
+  </data>
+  <data name="infoLabel2.Text" xml:space="preserve">
+    <value>Marathon Skills - фестиваль бега, проводимый каждый год в разных частях мира. Может быть три зачета: Полный Марафон, Полумарафон и  забег для новичков - таким образом фестиваль подходит всем.
+
+В этом году Marathon Skills пройдёт в  Сан-Паоло, Бразилия, он должен стать самым большим фестивалем бега. Это финансовый центр Бразилии и самый большой город в Южной Америке. Сан-Пауло увидят тысячи бегунов, которые будут бежать мимо небоскребов, зеленых парков и великолепной архитектуры.</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
